# py-authk

./: .coveragerc  CHANGELOG.md  LICENSE.md  README.md  __init__.py  authk  pyproject.toml  pytest-coverage.txt  pytest.xml  requirements.txt
.github/workflows/: changelog.yml  test-coverage.yml  test.yml  type.yml
scripts/: format-imports.sh  format.sh  lint.sh  test-coverage.sh  type.sh
src/: _authorized_keys.py  add.py  remove.py
src/authk/: __init__.py  _authk.py  _authorized_keys.py  add.py  remove.py
test/unit/: __init__.py  test_add_function.py  test_add_remove_functions.py  test_authorized_keys.py  test_remove_function.py
tests/unit/: test_add_function.py  test_authorized_keys.py  test_remove_function.py
